fix: functional support jdk1.8